# NNSarcasm-S-Event

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CharDetector  CharDetector.cpp  CharDetector.h  HCharDetector  HCharDetector.cpp  HCharDetector.h  HSCharDetector  HSCharDetector.cpp  HSCharDetector.h  HSWordDetector  HSWordDetector.cpp  HSWordDetector.h  HWordDetector  HWordDetector.cpp  HWordDetector.h  Makefile  Options.h  SEventDetector  SEventDetector.cpp  SEventDetector.h  cmake_install.cmake  nohup.out  testOutput  train.sh
basic/: BiHidderLayer.h  CNNCharClassifier.h  CNNHCharClassifier.h  CNNHSCharClassifier.h  CNNHSWordClassifier.h  CNNHWordClassifier.h  CNNWordClassifier.h  Example.h  Feature.h  Instance.h  InstanceReader.h  Pipe.h  SparseUniHidderLayer.h  TriHidderLayer.h  UniHidderLayer.h  Utiltensor.h
